[gd_scene load_steps=4 format=3 uid="uid://5ahwfjmyr1er"]

[ext_resource type="Texture2D" uid="uid://0j5ugqcxxvw5" path="res://art/quests/quest5/food_land/scroll.png" id="1_8bbp4"]
[ext_resource type="Script" path="res://scripts/quests/recipe.gd" id="1_grgii"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jlruh"]
size = Vector2(29, 29)

[node name="Recipe" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_grgii")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8bbp4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_jlruh")

[node name="SpawnTime" type="Timer" parent="."]
wait_time = 60.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SpawnTime" to="." method="_on_spawn_time_timeout"]
